# readmegen

./: .gitignore  PROMO_POST.md  README.md  pyproject.toml
.github/: FUNDING.yml
readmegen/: __init__.py  cli.py  generator.py  templates.py
readmegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
